--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Mult RH{% endblock %}</title>
+    
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <!-- Bootstrap -->
     <link
@@ -59,7 +61,7 @@
           </ul>
         </li>
 
-        <li class="nav-item"><a class="nav-link active" href="#">Vagas</a></li>
+        <li class="nav-item"><a class="nav-link active" href="{% url 'lista_vagas' %}">Vagas</a></li>
 
         <li class="nav-item">
           <a target="_blank" class="nav-link active" href="#">
@@ -81,58 +83,75 @@
         </li>
       </ul>
 
-      <form class="d-flex">
+      <form class="d-flex me-3">
         <input class="form-control me-2" type="search" placeholder="Pesquisar…">
         <button class="btn btn-outline-light fw-bold">Pesquisar</button>
       </form>
 
-      <div class="d-flex">
+      {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}" class="btn btn-outline-light fw-bold rounded-3">
+          Sair
+        </a>
+       {%else %} 
         <button type="button"
           class="btn btn-outline-light fw-bold rounded-3"
           data-bs-toggle="modal"
           data-bs-target="#loginModal">
           Login
         </button>
-      </div>
-
+      {% endif %}
     </div>
   </div>
 </nav>
-
 
 <main class="container-fluid p-0">
   {% block content %}{% endblock %}
 </main>
 
-<!--Modal-->
-<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+<!-- MODAL LOGIN -->
+<div class="modal fade" id="loginModal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content bg-body-secondary">
 
-      <!-- Header-Modal -->
       <div class="modal-header border-0">
-        <h5 class="d-flex flex-fill justify-content-center text-center fw-bolder" id="loginModalLabel">Login
-        </h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+        <h5 class="w-100 text-center fw-bolder">Login</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
 
-      <!-- Body-Modal -->
       <div class="modal-body">
-        <form>
+        <form method="POST" action="{% url 'login' %}">
+          {% csrf_token %}
+
+          {% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-danger text-center py-2">
+                {{ message }}
+              </div>
+            {% endfor %}
+          {% endif %}
+
           <div class="mb-3">
-            <label for="email" class="form-label">E-mail</label>
-            <input type="email" class="form-control rounded-3" id="email" placeholder="SeuEmail@SeuDominio.com">
+            <label class="form-label">E-mail</label>
+            <input type="email" name="email"
+              class="form-control rounded-3"
+              placeholder="SeuEmail@SeuDominio.com" required>
           </div>
+
           <div class="mb-3">
-            <label for="senha" class="form-label">Senha</label>
-            <input type="password" class="form-control rounded-3" id="senha">
+            <label class="form-label">Senha</label>
+            <input type="password" name="password"
+              class="form-control rounded-3" required>
           </div>
-          <button type="submit" class="btn btn-primary w-100 rounded-3 fw-bold">Entrar</button>
+
+          <button type="submit"
+            class="btn btn-primary w-100 rounded-3 fw-bold">
+            Entrar
+          </button>
         </form>
+
         <p class="mt-3 text-center">
           Não tem login?
-          <!-- Botão que fecha esse modal e abre outro -->
-          <a href="{% url 'cadastro' %}" class="fw-bold text-primary" >
+          <a href="{% url 'cadastro' %}" class="fw-bold text-primary">
             Cadastre-se aqui!
           </a>
         </p>
@@ -143,6 +162,16 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+{% if messages %}
+<script>
+  const loginModal = new bootstrap.Modal(
+    document.getElementById('loginModal')
+  );
+  loginModal.show();
+</script>
+{% endif %}
+
 {% block extra_js %}{% endblock %}
 
 </body>
