--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -22,7 +22,7 @@
       <div class="carousel-caption d-none d-md-block text-start">
         <h1 class="fw-bold">NÃO PERCA SEU TEMPO</h1>
         <p>FAÇA O CADASTRO DO SEU CURRÍCULO HOJE MESMO</p>
-        <a href="{% url 'cadastro' %}" class="btn btn-light btn-lg fw-bold">Cadastre-se</a>
+        <a href="{% url 'accounts:cadastro' %}" class="btn btn-light btn-lg fw-bold">Cadastre-se</a>
       </div>
     </div>
 
@@ -31,7 +31,7 @@
       <div class="carousel-caption d-none d-md-block text-start">
         <h1 class="fw-bold">GARANTA SUA VAGA NO MERCADO</h1>
         <p>96% dos candidatos são contratados</p>
-        <a href="{% url 'cadastro' %}" class="btn btn-light btn-lg fw-bold">Cadastre-se</a>
+        <a href="{% url 'accounts:cadastro' %}" class="btn btn-light btn-lg fw-bold">Cadastre-se</a>
       </div>
     </div>
 
@@ -40,7 +40,7 @@
       <div class="carousel-caption d-none d-md-block text-start">
         <h1 class="fw-bold">VAGAS PARA ENTREVISTAS</h1>
         <p>Os melhores empregos você encontra aqui</p>
-        <a href="{% url 'cadastro' %}" class="btn btn-light btn-lg fw-bold">Cadastre-se</a>
+        <a href="{% url 'accounts:cadastro' %}" class="btn btn-light btn-lg fw-bold">Cadastre-se</a>
       </div>
     </div>
 
